# sequra_challenge

./: .gitignore  README.md  compose.yml  dbt_project.yml  profiles.yml  pyproject.toml  pytest.ini
dbt/analysis/: challenge_questions_1.sql  challenge_questions_2.sql  challenge_questions_3.sql
dbt/models/marts/space/: launchcores.sql  launches.sql
dbt/models/staging/spacex/: _spacex__models.yml  _spacex__sources.yml  stg_spacex__launchcores.sql  stg_spacex__launchcrews.sql  stg_spacex__launches.sql
sequra_challenge/: constants.py  database.py  main.py  model.py
sequra_challenge/sql/tables/: create_table_launchcores.sql  create_table_launchcrews.sql  create_table_launches.sql
tests/: test_database.py  test_main.py  test_model.py
