[tool.poetry]
name = "sequra-challenge"
version = "0.1.0"
description = ""
authors = ["Xavier Rodríguez <53512721+XavierRdrgz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pydantic = "^2.7.0"
psycopg2 = "^2.9.9"
dbt-postgres = "^1.7.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
